# Google-Forms-Autofiller

./: .gitignore  README.md  citations.txt  cvip-train-a-model.ipynb  cvip_requirements.txt  main.py  model_test_inference.py  pyproject.toml  requirements.txt  server.py
LayoutLMv3/: Fine_tune_LayoutLMv3_on_FUNSD_(HuggingFace_Trainer).ipynb
database/: Resume.json  Work.json  table_test.json  uwu.json
extension/: content.js  manifest.json  popup.html  popup.js
static/: index.html
test_files/: test_aadhaar_qr.py
