[project]
name = "google-forms-autofiller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.27",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "uvicorn>=0.46.0",
]
