[project]
name = "google-forms-autofiller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "numpy<2.0.0",
    "opencv-python==4.8.1.78",
    "paddleocr==2.8.1",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "pyaadhaar>=2.0.2",
    "pymupdf>=1.27.2.3",
    "pyresparser>=1.0.6",
    "python-multipart>=0.0.27",
    "pyzbar>=0.1.9",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "uvicorn>=0.46.0",
    "zxing-cpp>=3.0.0",
]
